# csound-ac

./: .gitmodules  CMakeLists.txt  README.md  build-linux.sh  build-macos.sh  clean-build-linux.sh  clean-build-macos.sh  core.bash  create_playable_csound_manual.py  find-csound-ac.sh  orc_rollup.py  update-dependencies.sh
.github/workflows/: cmake.yml
CsoundAC/: CMakeLists.txt  CMaskNode.hpp  Cell.hpp  ChordLindenmayer.cpp  ChordLindenmayer.hpp  ChordLindenmayerTest.py  ChordSpace.cpp  ChordSpace.hpp  ChordSpaceBase.hpp  ChordSpaceTest.cpp  ChordSpaceTests.cpp  ChordSpace_gmp.hpp  Composition.cpp  Conversions.cpp  Counterpoint.cpp  CppSound.cpp  CppSound.hpp  CsoundAC.i  CsoundFile.cpp  CsoundProducer.hpp  Event.cpp  Event.hpp  ExternalNode.cpp  ExternalNode.hpp  ExternalNodeTest.cpp  HarmonyIFS.hpp  HarmonyIFS2.hpp  ImageToScore.cpp  ImageToScore.hpp  Lindenmayer.cpp  Lindenmayer.hpp  MCRM.cpp  MCRM.hpp  Midifile.cpp  Midifile.hpp  MusicModel.cpp  MusicModel.hpp  Platform.hpp  Score.cpp  Score.hpp  (+15 more)
cmake/Modules/: FindCsound.cmake
dependencies/: CMakeLists.txt  update-dependency-packages.sh  update-dependency-repositories.sh  update-dependency-submodules.sh
doc/: Doxyfile  GEOMETRY.md  latex.sh
examples/: README.md
examples/blue_leaves/: Blue_Leaves_von_Ruesner-2.cpp
examples/cellular/: Cellular-v5-macos.py  M1.mid  M100.mid  M101.mid  M103.mid  M105.mid  M108.mid  M11.mid  M111.mid  M112.mid  M113.mid  M114.mid  M116.mid  M118.mid  M119.mid  M12.mid  M121.mid  M122.mid  M123.mid  M127.mid  M128.mid  M130.mid  M132.mid  M133.mid  M135.mid  M136.mid  M137.mid  M138.mid  M139.mid  M14.mid  M140.mid  M141.mid  M143.mid  M144.mid  M147.mid  M148.mid  M15.mid  M150.mid  M151.mid  M155.mid  (+140 more)
examples/image_to_score/: image_to_score.cpp
examples/oblivion/: oblivion.csd  oblivion.py
examples/tests/: ChordLindenmayerTest.py
patches/: Bamboo.inc  Blower.inc  Bower.inc  Droner.inc  FMWaterBell.inc  FlossBarmodel.inc  Fmpercfl.inc  Guitar.inc  Harpsichord.inc  HeavyMetal.inc  Kung1.inc  Kung2.inc  LivingstonGuitar.inc  Melody.inc  Mverb2020Vst3.inc  Night2.inc  PianoOutPianoteqVst3.inc  Plucked.inc  PulseWidthModulation.inc  Rhodes.inc  SeidelHarmOsc.inc  SeidelHarmonicOscillator.inc  Shiner.inc  StringPad.inc  Sweeper.inc  Template.inc  ToneWheelOrgan.inc  TubularBell.inc  WGPluck.inc  YiString.inc  ZakianFlute.inc  evoke.py  evoke_harmony_comb.csd  evoke_harmony_comb.inc  evoke_harmony_convolution.csd  evoke_harmony_convolution.inc  evoke_harmony_convolution_walk.csd  evoke_harmony_pvs.csd  harmony_convolver.inc  harmony_convolver_walk.csd  (+2 more)
playpen/: .SciTEUser.properties  README.md  add2csd.py  playpen.ini  playpen.py  post-process.py  process.py
playpen/vscode/playpen/: extension.js  package.json
reaper/: README.md  ac_reaper.py
silencio/js/: Silencio.js  csound_loader.js
silencio/python/: GeneralizedContextualGroup.py
tests/: Cellular-v5-macos.py  ChordLindenmayerTest.py  M10.mid  M102.mid  M104.mid  M106.mid  M109.mid  M110.mid  M115.mid  M117.mid  M120.mid  M124.mid  M125.mid  M126.mid  M129.mid  M13.mid  M131.mid  M134.mid  M142.mid  M145.mid  M146.mid  M149.mid  M152.mid  M153.mid  M154.mid  M158.mid  M165.mid  M166.mid  M168.mid  M172.mid  M18.mid  M21.mid  M23.mid  M24.mid  M26.mid  M27.mid  M29.mid  M34.mid  M36.mid  M42.mid  (+50 more)
user-guide/: Reaper-CsoundVST3-Imagery.RPP  basic-python.py  basic-reascript.py  basic-score-bin.csd  basic.csd  csound-ac-user-guide.tex  csoundac-basic-python.py  csoundac-basic-reascript.py  csoundac-basic-score-bin.csd  csoundac-score-bin.csd  duo-dualities.RPP  imagery.RPP  python-duo-dualities.py  python-imagery.py  python-simple-composition.py  python-trans-scale.py  reascript-duo-dualities.py  reascript-imagery.py  reascript-trans-scale.py  simple-python.py  simple-reaper.py  simple-score-bin.csd  simple.csd  simplest-score-bin.csd  trans-scale.RPP  two-dualities.py
vscode-playpen/: README.md  extension.js  package.json
